<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/item_list_view_contato_selected"
              android:orientation="horizontal"
              android:padding="10dp">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/imagem_lanche"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="#2d8bf0"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelDescricao"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="20"
                android:textSize="13sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelPreco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelPreco"
                android:textSize="13sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/preco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:maxLength="20"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>